Suppress plotly warnings

--- a/inst/rmd/generate_report_child.Rmd
+++ b/inst/rmd/generate_report_child.Rmd
@@ -20,12 +20,14 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   plotly::ggplotly(TIC_ms1[[i]])
+   suppressWarnings(
+      plotly::ggplotly(TIC_ms1[[i]])
+   )
    
 } else {
    
    pander::pander("GGPLOTLY ERROR")
-
+   
 }
 
 ```
@@ -40,12 +42,14 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   plotly::ggplotly(TIC_ms2[[i]])
+   suppressWarnings(
+      plotly::ggplotly(TIC_ms2[[i]])
+   )
    
 } else {
    
    pander::pander("GGPLOTLY ERROR")
-
+   
 }
 
 ```
@@ -59,12 +63,14 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   plotly::ggplotly(BPC_ms1[[i]])
+   suppressWarnings(
+      plotly::ggplotly(BPC_ms1[[i]])
+   )
    
 } else {
    
    pander::pander("GGPLOTLY ERROR")
-
+   
 }
 
 ```
@@ -78,14 +84,16 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   plotly::ggplotly(BPC_ms2[[i]])
+   suppressWarnings(
+      plotly::ggplotly(BPC_ms2[[i]])
+   )
    
 } else {
    
    pander::pander("GGPLOTLY ERROR")
-
-}
    
+}
+
 ```
 
 ### Injection Times, MS1
@@ -97,12 +105,14 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   plotly::ggplotly(injectionTime_ms1_plot[[i]])
+   suppressWarnings(
+      plotly::ggplotly(injectionTime_ms1_plot[[i]])
+   )
    
 } else {
    
    pander::pander("GGPLOTLY ERROR")
-
+   
 }
 
 ```
@@ -116,12 +126,14 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   plotly::ggplotly(injectionTime_ms2_plot[[i]])
+   suppressWarnings(
+      plotly::ggplotly(injectionTime_ms2_plot[[i]])
+   )
    
 } else {
    
    pander::pander("GGPLOTLY ERROR")
-
+   
 }
 
 ```
