More mutate_at nonsense

--- a/inst/rmd/generate_report_parent.Rmd
+++ b/inst/rmd/generate_report_parent.Rmd
@@ -46,7 +46,7 @@ rawFileList %>%
 ```{r echo=FALSE}
 
 rawFileInfoSum %>% 
-  mutate_at(c(14,15,17,18,19,21,22,24), ~format(., scientific = 4, digits = 4, nsmall = 3)) %>%
+  dplyr::mutate_at(c(14,15,17,18,19,21,22,24), ~format(., scientific = 4, digits = 4, nsmall = 3)) %>%
   DT::datatable(
     extensions = c("FixedColumns", "Buttons"),
     class = "hover",
