Add MagLab CSS theme, minor fixes

--- a/inst/rmd/generate_report_child.Rmd
+++ b/inst/rmd/generate_report_child.Rmd
@@ -20,22 +20,24 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   suppressWarnings(
-      plotly::ggplotly(TIC_ms1[[i]]) %>% 
-         plotly::style(
-            line = list(
-               width = 1, 
-               color = "black"
-            )
-         ) %>% 
-         plotly::config(
-            displaylogo = FALSE,
-            toImageButtonOptions = list(
-               format = "svg",
-               width = 800,
-               height = 500
-            )
-         ) 
+   suppressMessages(
+      suppressWarnings(
+         plotly::ggplotly(TIC_ms1[[i]]) %>% 
+            plotly::style(
+               line = list(
+                  width = 1, 
+                  color = "black"
+               )
+            ) %>% 
+            plotly::config(
+               displaylogo = FALSE,
+               toImageButtonOptions = list(
+                  format = "svg",
+                  width = 800,
+                  height = 500
+               )
+            ) 
+      )
    )
    
 } else {
@@ -56,22 +58,24 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   suppressWarnings(
-      plotly::ggplotly(TIC_ms2[[i]]) %>% 
-         plotly::style(
-            line = list(
-               width = 1, 
-               color = "black"
-            )
-         ) %>% 
-         plotly::config(
-            displaylogo = FALSE,
-            toImageButtonOptions = list(
-               format = "svg",
-               width = 800,
-               height = 500
-            )
-         ) 
+   suppressMessages(
+      suppressWarnings(
+         plotly::ggplotly(TIC_ms2[[i]]) %>% 
+            plotly::style(
+               line = list(
+                  width = 1, 
+                  color = "black"
+               )
+            ) %>% 
+            plotly::config(
+               displaylogo = FALSE,
+               toImageButtonOptions = list(
+                  format = "svg",
+                  width = 800,
+                  height = 500
+               )
+            ) 
+      )
    )
    
 } else {
@@ -91,22 +95,24 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   suppressWarnings(
-      plotly::ggplotly(BPC_ms1[[i]]) %>% 
-         plotly::style(
-            line = list(
-               width = 1, 
-               color = "black"
-            )
-         ) %>% 
-         plotly::config(
-            displaylogo = FALSE,
-            toImageButtonOptions = list(
-               format = "svg",
-               width = 800,
-               height = 500
-            )
-         ) 
+   suppressMessages(
+      suppressWarnings(
+         plotly::ggplotly(BPC_ms1[[i]]) %>% 
+            plotly::style(
+               line = list(
+                  width = 1, 
+                  color = "black"
+               )
+            ) %>% 
+            plotly::config(
+               displaylogo = FALSE,
+               toImageButtonOptions = list(
+                  format = "svg",
+                  width = 800,
+                  height = 500
+               )
+            ) 
+      )
    )
    
 } else {
@@ -126,22 +132,24 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   suppressWarnings(
-      plotly::ggplotly(BPC_ms2[[i]]) %>% 
-         plotly::style(
-            line = list(
-               width = 1, 
-               color = "black"
-            )
-         ) %>% 
-         plotly::config(
-            displaylogo = FALSE,
-            toImageButtonOptions = list(
-               format = "svg",
-               width = 800,
-               height = 500
-            )
-         ) 
+   suppressMessages(
+      suppressWarnings(
+         plotly::ggplotly(BPC_ms2[[i]]) %>% 
+            plotly::style(
+               line = list(
+                  width = 1,
+                  color = "black"
+               )
+            ) %>% 
+            plotly::config(
+               displaylogo = FALSE,
+               toImageButtonOptions = list(
+                  format = "svg",
+                  width = 800,
+                  height = 500
+               )
+            ) 
+      )
    )
    
    
@@ -162,22 +170,24 @@ temp_ggplotly <-
 
 if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    
-   suppressWarnings(
-      plotly::ggplotly(injectionTime_ms1_plot[[i]]) %>% 
-         plotly::style(
-            line = list(
-               width = 1, 
-               color = "black"
-            )
-         ) %>% 
-         plotly::config(
-            displaylogo = FALSE,
-            toImageButtonOptions = list(
-               format = "svg",
-               width = 800,
-               height = 500
-            )
-         ) 
+   suppressMessages(
+      suppressWarnings(
+         plotly::ggplotly(injectionTime_ms1_plot[[i]]) %>% 
+            plotly::style(
+               marker = list(
+                  size = 4,
+                  color = "black"
+               )
+            ) %>%
+            plotly::config(
+               displaylogo = FALSE,
+               toImageButtonOptions = list(
+                  format = "svg",
+                  width = 800,
+                  height = 500
+               )
+            ) 
+      )
    )
    
    
@@ -201,11 +211,11 @@ if (is.null(temp_ggplotly[["result"]]) == FALSE) {
    suppressWarnings(
       plotly::ggplotly(injectionTime_ms2_plot[[i]]) %>% 
          plotly::style(
-            line = list(
-               width = 1, 
+            marker = list(
+               size = 4,
                color = "black"
             )
-         ) %>% 
+         ) %>%
          plotly::config(
             displaylogo = FALSE,
             toImageButtonOptions = list(
